--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
 asgiref==3.8.1
+async-timeout==4.0.3
+cffi==1.17.1
 click==8.1.7
 colorama==0.4.6
 crispy-bootstrap4==2024.1
+cryptography==43.0.1
 cssbeautifier==1.15.1
 Django==5.1.1
+django-cors-headers==4.4.0
 django-crispy-forms==2.3
+django-encrypt==0.1
+django-filter==24.3
+django-redis==5.4.0
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 djlint==1.35.2
@@ -14,10 +21,13 @@ html-void-elements==0.1.0
 jsbeautifier==1.15.1
 json5==0.9.25
 pathspec==0.12.1
+pillow==10.4.0
 psycopg2==2.9.9
+pycparser==2.22
 PyJWT==2.9.0
 python-dotenv==1.0.1
 PyYAML==6.0.2
+redis==5.0.8
 regex==2024.9.11
 six==1.16.0
 sqlparse==0.5.1
